# ai-agent-demo

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  COPYRIGHT  LICENSE  README.md  Taskfile.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 18930377a226_add_phase7_tables.py  79490d3775db_add_is_public_to_agents.py  8bf42ba2e6d8_add_workflow_tables.py  cc9d268ce0da_add_trigger_tables.py  dbbba02798e2_initial_tables.py
backend/scripts/: generate_openapi.py
backend/src/agent_platform/: __init__.py  main.py
backend/src/agent_platform/a2a/: __init__.py  card.py  client.py  server.py  task_store.py  types.py
backend/src/agent_platform/api/: deps.py
backend/src/agent_platform/auth/: __init__.py  jwt.py
backend/src/agent_platform/core/: __init__.py  chat.py  config.py  executor.py
backend/src/agent_platform/db/: __init__.py  models.py  repository.py  session.py
backend/src/agent_platform/llm/: __init__.py  base.py  provider.py  tools.py
backend/src/agent_platform/services/: __init__.py  rate_limiter.py  vault_service.py  workflow_engine.py
backend/src/agent_platform/tasks/: __init__.py  celery_app.py  scheduler.py  workflow_tasks.py
backend/tests/: __init__.py  conftest.py  test_a2a.py  test_agents_api.py  test_api.py  test_auth.py  test_executor.py  test_personal_agents.py  test_public_agents.py  test_repository.py  test_tools.py  test_triggers.py  test_user_settings.py  test_workflow_engine.py  test_workflows.py
(+143 files in other folders)
