[project]
name = "agent-platform"
version = "0.1.0"
description = "マルチユーザー対応AIエージェントプラットフォーム"
readme = "README.md"
authors = [
    { name = "kazuki.takahashi", email = "kazuki.takahashi@eplga.co.jp" }
]
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "greenlet>=3.0.0",
    # LLM
    "litellm>=1.50.0",
    # Auth
    "supabase>=2.10.0",
    "python-jose[cryptography]>=3.3.0",
    # A2A Protocol
    "a2a-sdk>=0.2.0",
    # Utilities
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.17",
    # SSE
    "sse-starlette>=2.0.0",
    # Tools
    "docker>=7.0.0",
    "aiosqlite>=0.21.0",
    "jmespath>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "aiosqlite>=0.20.0",  # SQLite async driver for tests
]

[project.scripts]
agent-platform = "agent_platform:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
